--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,9 @@
     <body>
     <div class="main-content">
       {{>header}}
-      <img class="portrait" src="./img/avatar.jpg" />
+      <p>This website uses data from mapbox.com and darksky.net.</p>
+      <br>
+      <img class="portrait" src="./img/avatar2.png" />
     </div>
     
 
