--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,7 @@
     <body>
     <div class="main-content">
       {{>header}}
-      <p>This website uses data from mapbox.com and darksky.net.</p>
+      <p>This website uses data from mapbox.com and weatherstack.com.</p>
       <br>
       <img class="portrait" src="./img/avatar2.png" />
     </div>
